# customer-intelligence

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/extractions/: cloudfirst_analytics_call1.json
data/ground_truth/: growthco_call1.json  legacy_systems_corp_call1.json  legacy_systems_corp_call2.json  safeguard_inc_call1.json  scaleup_ltd_call1.json  scaleup_ltd_call2.json  techcorp_call1.json
data/summaries/: cloudfirst_analytics_call1.json  growthco_call1.json  legacy_systems_corp_call1.json  legacy_systems_corp_call2.json  meridian_healthcare_call1.json  safeguard_inc_call1.json  scaleup_ltd_call1.json  scaleup_ltd_call2.json  techcorp_call1.json  velocity_logistics_call1.json
data/transcripts/: cloudfirst_analytics_call1.json  growthco_call1.json  legacy_systems_corp_call1.json  legacy_systems_corp_call2.json  meridian_healthcare_call1.json  safeguard_inc_call1.json  scaleup_ltd_call1.json  scaleup_ltd_call2.json  techcorp_call1.json  velocity_logistics_call1.json
docs/: README.md  RL-workflow.md  customer-pipeline-inspiration.md  evaluation.md  research-plan.md  setup.md  workflow.md
docs/plans/: streamlit-demo.md
notebooks/: pipeline_demo.ipynb
spec/: CLAUDE.md  README.md
spec/decision-records/: 2026-02-07-sales-calls-as-primary-data-source.md  README.md
spec/features/: 2026-02-07-pipeline-architecture.md  2026-02-07-signal-extraction.md  README.md  (+1 more)
tests/: test_evaluation.py  test_evaluation_integration.py  test_extraction.py  test_prompts.py  test_schemas.py  test_synthetic.py
(+38 files in other folders)
